# api/openapi.yaml
@@ -20,6 +20,12 @@ security:
 tags:
 - description: not yet ready
   name: project
+- description: not yet ready
+  name: workpackage
+- description: not yet ready
+  name: task
+- description: not yet ready
+  name: employee
 paths:
   /project:
     post:
@@ -128,34 +134,475 @@ paths:
       - project
       x-method-getAll: "true"
       x-eov-operation-handler: controllers/ProjectController
+  /workpackage:
+    post:
+      operationId: createworkpackage
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/workpackage'
+        description: data to be created
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/workpackage'
+          description: successful operation
+      summary: Creates the data
+      tags:
+      - workpackage
+      x-eov-operation-handler: controllers/WorkpackageController
+  /workpackage/{workpackageId}:
+    delete:
+      operationId: deleteworkpackage
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: workpackageId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: successful operation
+      summary: Delete the element
+      tags:
+      - workpackage
+      x-eov-operation-handler: controllers/WorkpackageController
+    get:
+      operationId: getworkpackage
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: workpackageId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/workpackage'
+          description: successful operation
+      summary: Get the element
+      tags:
+      - workpackage
+      x-eov-operation-handler: controllers/WorkpackageController
+    put:
+      operationId: updateworkpackage
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: workpackageId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/workpackage'
+        description: data to be updated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/workpackage'
+          description: successful operation
+      summary: Updates the element
+      tags:
+      - workpackage
+      x-eov-operation-handler: controllers/WorkpackageController
+  /workpackage/getAll:
+    get:
+      operationId: getAllworkpackage
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/workpackage'
+                type: array
+          description: successful operation
+      summary: Get all the data
+      tags:
+      - workpackage
+      x-method-getAll: "true"
+      x-eov-operation-handler: controllers/WorkpackageController
+  /task:
+    post:
+      operationId: createtask
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/task'
+        description: data to be created
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/task'
+          description: successful operation
+      summary: Creates the data
+      tags:
+      - task
+      x-eov-operation-handler: controllers/TaskController
+  /task/{taskId}:
+    delete:
+      operationId: deletetask
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: taskId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: successful operation
+      summary: Delete the element
+      tags:
+      - task
+      x-eov-operation-handler: controllers/TaskController
+    get:
+      operationId: gettask
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: taskId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/task'
+          description: successful operation
+      summary: Get the element
+      tags:
+      - task
+      x-eov-operation-handler: controllers/TaskController
+    put:
+      operationId: updatetask
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: taskId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/task'
+        description: data to be updated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/task'
+          description: successful operation
+      summary: Updates the element
+      tags:
+      - task
+      x-eov-operation-handler: controllers/TaskController
+  /task/getAll:
+    get:
+      operationId: getAlltask
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/task'
+                type: array
+          description: successful operation
+      summary: Get all the data
+      tags:
+      - task
+      x-method-getAll: "true"
+      x-eov-operation-handler: controllers/TaskController
+  /employee:
+    post:
+      operationId: createemployee
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/employee'
+        description: data to be created
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/employee'
+          description: successful operation
+      summary: Creates the data
+      tags:
+      - employee
+      x-eov-operation-handler: controllers/EmployeeController
+  /employee/{employeeId}:
+    delete:
+      operationId: deleteemployee
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: employeeId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: successful operation
+      summary: Delete the element
+      tags:
+      - employee
+      x-eov-operation-handler: controllers/EmployeeController
+    get:
+      operationId: getemployee
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: employeeId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/employee'
+          description: successful operation
+      summary: Get the element
+      tags:
+      - employee
+      x-eov-operation-handler: controllers/EmployeeController
+    put:
+      operationId: updateemployee
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: employeeId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/employee'
+        description: data to be updated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/employee'
+          description: successful operation
+      summary: Updates the element
+      tags:
+      - employee
+      x-eov-operation-handler: controllers/EmployeeController
+  /employee/getAll:
+    get:
+      operationId: getAllemployee
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/employee'
+                type: array
+          description: successful operation
+      summary: Get all the data
+      tags:
+      - employee
+      x-method-getAll: "true"
+      x-eov-operation-handler: controllers/EmployeeController
 components:
   schemas:
     project:
       example:
-        ProjectAbstract: ProjectAbstract
-        ProjectTitle: ProjectTitle
-        ProjectStartDate: ProjectStartDate
-        ProjectDuration: 0.8008281904610115
+        pWorkpackage:
+        - ""
+        - ""
+        pStart: pStart
+        pAbstract: pAbstract
+        pTitle: pTitle
+        pEnd: pEnd
         _id: _id
-        ProjectEndDate: ProjectEndDate
+        pDuration: pDuration
+        pGA: pGA
+        pDescription: pDescription
+        pImage:
+          data: data
+          name: name
+        pWebsite: pWebsite
       properties:
         _id:
           type: string
-        ProjectTitle:
+        pImage:
+          $ref: '#/components/schemas/project_pImage'
+        pTitle:
           type: string
-        ProjectDuration:
-          format: double
-          type: number
-        ProjectStartDate:
+        pStart:
           type: string
-        ProjectEndDate:
+        pWebsite:
           type: string
-        ProjectAbstract:
+        pEnd:
+          type: string
+        pDuration:
+          type: string
+        pGA:
+          type: string
+        pAbstract:
+          type: string
+        pDescription:
+          type: string
+        pWorkpackage:
+          items:
+            oneOf:
+            - $ref: '#/components/schemas/workpackage'
+            - type: string
+            x-one-of-name: workpackage
+          type: array
+      required:
+      - pAbstract
+      - pDescription
+      - pDuration
+      - pEnd
+      - pGA
+      - pImage
+      - pStart
+      - pTitle
+      - pWebsite
+      - pWorkpackage
+      type: object
+    workpackage:
+      example:
+        wName: wName
+        wPMs: wPMs
+        _id: _id
+        wRole: wRole
+      properties:
+        _id:
+          type: string
+        wName:
+          type: string
+        wPMs:
+          type: string
+        wRole:
           type: string
       required:
-      - ProjectAbstract
-      - ProjectDuration
-      - ProjectEndDate
-      - ProjectStartDate
-      - ProjectTitle
+      - wName
+      - wPMs
+      - wRole
       type: object
+    task:
+      example:
+        tEnd: tEnd
+        tDescription: tDescription
+        tStart: tStart
+        tPMs: tPMs
+        tName: tName
+        _id: _id
+      properties:
+        _id:
+          type: string
+        tName:
+          type: string
+        tStart:
+          type: string
+        tEnd:
+          type: string
+        tPMs:
+          type: string
+        tDescription:
+          type: string
+      required:
+      - tDescription
+      - tEnd
+      - tName
+      - tPMs
+      - tStart
+      type: object
+    employee:
+      example:
+        eName: eName
+        eImage:
+          data: data
+          name: name
+        eSurname: eSurname
+        _id: _id
+        eProject:
+        - ""
+        - ""
+      properties:
+        _id:
+          type: string
+        eName:
+          type: string
+        eSurname:
+          type: string
+        eImage:
+          $ref: '#/components/schemas/project_pImage'
+        eProject:
+          items:
+            oneOf:
+            - $ref: '#/components/schemas/project'
+            - type: string
+            x-one-of-name: project
+          type: array
+      required:
+      - eImage
+      - eName
+      - eProject
+      - eSurname
+      type: object
+    project_pImage:
+      example:
+        data: data
+        name: name
+      properties:
+        data:
+          type: string
+        name:
+          type: string
+      type: object
+      x-isSchemaOnly: "true"
