# models/Project.js
@@ -1,23 +1,56 @@
 
+const { ProjectPImageSchema } =require('./ProjectPImage');
 const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
+
 const projectSchema = new Schema({
 Underscoreid:String , 
 
-ProjectTitle:String , 
 
-ProjectDuration:Number , 
+pImage:  
+ProjectPImageSchema
+ , 
 
-ProjectStartDate:String , 
 
-ProjectEndDate:String , 
+pTitle:String , 
 
-ProjectAbstract:String 
+
+pStart:String , 
+
+
+pWebsite:String , 
+
+
+pEnd:String , 
+
+
+pDuration:String , 
+
+
+pGA:String , 
+
+
+pAbstract:String , 
+
+
+pDescription:String , 
+
+
+
+
+ pWorkpackage: [ 
+  {
+    type: Schema.Types.ObjectId,
+    ref:'workpackage'
+  }
+
+]
+
 
 
 })
 
 module.exports = {
-  Project : mongoose.model('Project', projectSchema),
+  Project : mongoose.model('project', projectSchema),
 }
 
