# models/Workpackage.js
@@ -1,0 +1,24 @@
+
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+const workpackageSchema = new Schema({
+Underscoreid:String , 
+
+
+wName:String , 
+
+
+wPMs:String , 
+
+
+wRole:String 
+
+
+
+})
+
+module.exports = {
+  Workpackage : mongoose.model('workpackage', workpackageSchema),
+}
+
