# models/index.js
@@ -1,4 +1,12 @@
+const employee = require('./employee');
 const project = require('./project');
+const project_pImage = require('./project_pImage');
+const task = require('./task');
+const workpackage = require('./workpackage');
 
 module.exports = {
-  project};
+  employee,
+  project,
+  project_pImage,
+  task,
+  workpackage};
