# services/WorkpackageService.js
@@ -1,18 +1,18 @@
 /* eslint-disable no-unused-vars */
 const Service = require('./Service');
-const { Project } = require('../models/Project');
+const { Workpackage } = require('../models/Workpackage');
 
 /**
 * Creates the data
 *
-* project Project data to be created
-* returns project
+* workpackage Workpackage data to be created
+* returns workpackage
 * */
-const createproject = ({ project }) => new Promise(
+const createworkpackage = ({ workpackage }) => new Promise(
   async (resolve, reject) => {
     try {
       let query = {};
-      query = await new Project(project).save();
+      query = await new Workpackage(workpackage).save();
       resolve(Service.successResponse({ query,}));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -25,14 +25,14 @@ const createproject = ({ project }) => new Promise(
 /**
 * Delete the element
 *
-* projectId String the Id parameter
+* workpackageId String the Id parameter
 * no response value expected for this operation
 * */
-const deleteproject = ({ projectId }) => new Promise(
+const deleteworkpackage = ({ workpackageId }) => new Promise(
   async (resolve, reject) => {
     try {
       let query = {};
-      query = await Project.findOneAndDelete({ _id:projectId }).exec();
+      query = await Workpackage.findOneAndDelete({ _id:workpackageId }).exec();
       resolve(Service.successResponse({ query,}));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -47,11 +47,11 @@ const deleteproject = ({ projectId }) => new Promise(
 *
 * returns Object
 * */
-const getAllproject = () => new Promise(
+const getAllworkpackage = () => new Promise(
   async (resolve, reject) => {
     try {
       let query = {}
-      query = await Project.find().populate(['pWorkpackage']).exec();
+      query = await Workpackage.find().exec();
       resolve(Service.successResponse(query));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -64,15 +64,15 @@ const getAllproject = () => new Promise(
 /**
 * Get the element
 *
-* projectId String the Id parameter
-* returns project
+* workpackageId String the Id parameter
+* returns workpackage
 * */
-const getproject = ({ projectId }) => new Promise(
+const getworkpackage = ({ workpackageId }) => new Promise(
   async (resolve, reject) => {
     try {
       let query = {};
-      query = await Project.findById(projectId)
-      .populate(['pWorkpackage']).exec();
+      query = await Workpackage.findById(workpackageId)
+      .exec();
       resolve(Service.successResponse({ query,}));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -85,15 +85,15 @@ const getproject = ({ projectId }) => new Promise(
 /**
 * Updates the element
 *
-* projectId String the Id parameter
-* project Project data to be updated (optional)
-* returns project
+* workpackageId String the Id parameter
+* workpackage Workpackage data to be updated (optional)
+* returns workpackage
 * */
-const updateproject = ({ projectId, project }) => new Promise(
+const updateworkpackage = ({ workpackageId, workpackage }) => new Promise(
   async (resolve, reject) => {
     try {
       let query = {};
-      query = await Project.findOneAndUpdate({ _id:projectId },project).exec();
+      query = await Workpackage.findOneAndUpdate({ _id:workpackageId },workpackage).exec();
       resolve(Service.successResponse({ query,}));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -105,9 +105,9 @@ const updateproject = ({ projectId, project }) => new Promise(
 );
 
 module.exports = {
-  createproject,
-  deleteproject,
-  getAllproject,
-  getproject,
-  updateproject,
+  createworkpackage,
+  deleteworkpackage,
+  getAllworkpackage,
+  getworkpackage,
+  updateworkpackage,
 };
